test/wwwroot/css/site.css
@font-face {
    font-family: 'FiraGO-SemiBold';
    src: url('FiraGO-SemiBold.ttf') format('truetype');
}

html, body {
    height: 100%;
    margin: 0;
    color: grey;
}

.header {
    background-color: red;
}

.content {
    min-height: 100%;
    margin-bottom: -60px; /* equal to footer height */
    background-color: blue
}

    .content:after {
        content: "";
        display: block;
    }

    .footer, .content:after {
        height: 60px;
    }

.activeCategory {
    background-color: #A1A1A1;
}


.textFont {
    font-family: FiraGO-SemiBold;
    font-size: 18px;
    font-style: normal;
    font-weight: 500;
    line-height: 25px;
    letter-spacing: -.03em;
    font-feature-settings: 'case' on;
    text-align: left;
    color: black;
}

.textFontBold {
    font-family: FiraGO-SemiBold;
    font-size: 21px;
    font-style: normal;
    font-weight: 700;
    line-height: 25px;
    letter-spacing: -.03em;
    font-feature-settings: 'case' on;
    text-align: left;
    color: white;
}


.categoryItem :hover {
    background-color: #A1A1A1;
}

#topInfoP {
    margin-right: 30px;
}

.textStyle {
    font-family: 'FiraGO-SemiBold' !important;
    font-style: normal;
    font-weight: 700;
    font-size: 21px;
    line-height: 20px;
    letter-spacing: -.03em;
    font-feature-settings: 'case' on;
    padding-top: 10px;
    color: white;
}

customText {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 500;
    font-size: 18px;
    line-height: 25px;
    text-decoration: none;
    color: black;
}

.main-card-size {
    width: 100%;
    height: 25vw;
    object-fit: fill;
}

a {
    color:black;
    text-decoration:none;
}

.side-card-size {
    width: 100%;
    height: 10vw;
    object-fit: fill;
}


@media only screen and (max-width: 1000px) {
    #toggle_button {
        float:right;
    }

    .main-card-size {
        width: 100%;
        height: 50vw;
        object-fit: fill;
    }

    .side-card-size {
        width: 100%;
        height: 50vw;
        object-fit: fill;
    }
}

@media only screen and (max-width: 600px) {
    #toggle_button {
        margin-left: 150px;
    }

    #mainPageP {
        margin-left: 40px;
    }

    #topInfoP {
        margin-right: 0px;
    }

    #mainLogoDiv {
        margin-left: -60px;
    }

    #mainLogoBeta {
        margin-left: -60px;
        margin-top:50px;
    }

    #LogoSvg {
        width: 180px;
    }

    .categoriesRow {
        justify-content:center;
    }

    .main-card-size {
        width: 100%;
        height: 50vw;
        object-fit: fill;
    }

    .side-card-size {
        width: 100%;
        height: 50vw;
        object-fit: fill;
    }

}

